--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -1,112 +1,55 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="renderer" content="webkit">
 <title>Applique Patches-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
-</head>
-<body>
-<div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://www.zalalaa.com/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" /></a>
-  <div class="navbar-body" id="navbody">
-    <ul class="nav">
-      <li><a href="https://www.zalalaa.com/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
-    </ul>
-  </div>
-  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
-</div>
-<script>
-  $(function(){
-    $("#navbar").auto({
-      "0":{"class":"navbar shadow"},
-      "1024":{"class":"navbar navbar-head navbar-show shadow"},
-    });
-  })
-</script>
-<br />
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-    <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">6</span></a></div> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#D1F1FF">
+<link rel="stylesheet" href="/q/c.css">
+<header>
+  <a href="https://zalalaa.com">
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
     </div>
+    <h1>
+      zalalaa<span>.</span>com
+    </h1>
+  </a>
+</header>
+<main class="index">
+<h2>Applique Patches</h2>
+<h4></h4>
+<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
+<div class="social-proof">
+  <h2>Applique Patches</h2>
 </div>
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h3 class="margin-bottom-mini weight" align="center">Applique Patches</h3>
-  <div class="grid big-grid-middle large-grid-large isplit-content">
-    <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/image/20201015/1602733139966686.jpg"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12.99</strong>
-        <p class="size-small flex-grow">It will make your clothes look beautiful and unique, if you ··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240615/1718438129101942.webp"  alt="Skull cloth patch" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Your clothes can be so gorgeous  <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240615/1718438305820621.webp"  alt="Embroidery flower bud lace flower applique" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:13.99</strong>
-        <p class="size-small flex-grow">Embroidery flower bud lace flower applique size: 30cm * 25cm··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240615/1718438351867877.webp"  alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:9.99</strong>
-        <p class="size-small flex-grow">Red, white and black car bone flower wedding headpiece lace ··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240615/1718437762770255.webp"  alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Clothing accessories, embroidery, lace cloth, computer embro··· <br />Read More</p>
-      </a>
-      <a class="big-x3 flex flex-column" href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="/q/upload/other/20240615/1718438037663625.webp"  alt="Tiger head Embroiderye sticker" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small"><span class="text-danger">&#36;</span>:12</strong>
-        <p class="size-small flex-grow">Tiger head embroidery sticker  <br />Read More</p>
-      </a>
-    </div>
+<div bys="grid">
+<a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><b>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</b></a><br /><a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><b>Skull cloth patch</b></a><br /><a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><img src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><b>Embroidery flower bud lace flower applique</b></a><br /><a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><img src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><b>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</b></a><br /><a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><img src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><b>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</b></a><br /><a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><b>Tiger head Embroiderye sticker</b></a><br />
   </div>
-    <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
-    </ul>
-  
-</div>
+<h3>Help</h3><ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<h3>Video</h3><ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
 
-<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</main>
+<aside>
+  <div>
+    <nav aria-labelledby="nav-header">
+      <div>
+        <h2 id="nav-header">Site navigation</h2>
+        <a class="active" href="https://zalalaa.com">Home</a>
+        <a href="/q/abouts/">About Us</a>
+        <a href="/q/patches/">Applique Patches</a>
+        <a href="/q/article/">Blog</a>
+        <a href="/q/video/">Video</a>
+        <a href="/q/contact/">Contact Us</a>
+      </div>
+    </nav>
+  </div>
+</aside>
+<footer>
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+</footer>
+<div class="background-logo">
+<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
 </div>
-<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
