--- a/q/abouts/index.html
+++ b/q/abouts/index.html
@@ -1,71 +1,55 @@
 <!doctype html>
 <html lang="en">
-<head>
-<title>zalalaa-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
+<title>Zalalaa-Arts, Crafts &amp; Sewing-zlalaa</title>
 <meta name="description" content="Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.Fashion and high quality lace make customers extraordina">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="renderer" content="webkit">
-<meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-06-15">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
-</head>
-<body>
-<div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://www.zalalaa.com/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" /></a>
-  <div class="navbar-body" id="navbody">
-    <ul class="nav">
-      <li><a href="https://www.zalalaa.com/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
-    </ul>
-  </div>
-  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#D1F1FF">
+<link rel="stylesheet" href="/q/c.css">
+<header>
+  <a href="https://zalalaa.com">
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
+    </div>
+    <h1>
+      zalalaa<span>.</span>com
+    </h1>
+  </a>
+</header>
+<main class="index">
+<p><a href="/">Home</a> >> <a href="/q/abouts/">About Us</a></p>
+<h2>Zalalaa</h2>
+<time>2012-12-06</time>
+ <div class="grid">
+<img src="/q/upload/image/20231224/1703425271933476.jpg" alt="[content::title],[content::date]">
+  <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p><br/></p><p>Fashion and high quality lace make customers extraordinary.</p><p><br/></p><p>Email: 9050150@qq.com</p>
+   
 </div>
-<script>
-  $(function(){
-    $("#navbar").auto({
-      "0":{"class":"navbar shadow"},
-      "1024":{"class":"navbar navbar-head navbar-show shadow"},
-    });
-  })
-</script>
-<br />
 
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h3 class="margin-bottom-mini weight" align="center">zalalaa</h3>
-  <p align="center">2012-12-06</p>
-  <div class="grid big-grid-middle large-grid-large isplit-content">
-    <div class="big-x4">
-      <a class="padding block text-white discovers-main" href="/q/upload/image/20231224/1703425271933476.jpg">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-           <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20231224/1703425271933476.jpg" alt="zalalaa" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-search-bg text-main"></i></div>
-        </div>
-        <strong class="weight-small">zalalaa</strong>
-        <p class="size-small"></p>
-      </a>
-    </div>
-    <div class="big-x8">
-      <p>Zalalaa Committed to garment accessories lace design, production and sales. The main products are: water soluble (milk silk, polyester light, cotton embroidery fabric and lace), bead embroidery, towel embroidery, chiffon, lace, etc.&nbsp;</p><p><br/></p><p>&nbsp;Fashion and high quality lace make customers extraordinary.</p><p><br/></p><p>Email:sbqwg@outlook.com</p>
-    </div>
+<h3>Help</h3><ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<h3>Video</h3><ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
+
+</main>
+<aside>
+  <div>
+    <nav aria-labelledby="nav-header">
+      <div>
+        <h2 id="nav-header">Site navigation</h2>
+        <a class="active" href="https://zalalaa.com">Home</a>
+        <a href="/q/abouts/">About Us</a>
+        <a href="/q/patches/">Applique Patches</a>
+        <a href="/q/article/">Blog</a>
+        <a href="/q/video/">Video</a>
+        <a href="/q/contact/">Contact Us</a>
+      </div>
+    </nav>
   </div>
-   <div class="grid big-grid-middle large-grid-large isplit-content">
-    <div class="big-x12 grid discovers">
-    </div>
-  </div>
+</aside>
+<footer>
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+</footer>
+<div class="background-logo">
+<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
 </div>
-<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
-</div>
-<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
