--- a/q/gbook/index.html
+++ b/q/gbook/index.html
@@ -1,73 +1,54 @@
 <!doctype html>
-<html lang="zh-Hans-CN">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="renderer" content="webkit">
+<html lang="en">
 <title>在线留言-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="theme-color" content="#32CD32">
-<link rel="canonical" href="http://za.com/ad.php?p=/MakeHtml/index&type=2&date=2024-06-15">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
-</head>
-<body>
-<div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://www.zalalaa.com/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" /></a>
-  <div class="navbar-body" id="navbody">
-    <ul class="nav">
-      <li><a href="https://www.zalalaa.com/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
-    </ul>
-  </div>
-  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
-</div>
-<script>
-  $(function(){
-    $("#navbar").auto({
-      "0":{"class":"navbar shadow"},
-      "1024":{"class":"navbar navbar-head navbar-show shadow"},
-    });
-  })
-</script>
-<br />
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-    <div class="grid">
-       <div class="big-x2 small-x6"><a href="/q/crafts/" title="Crafts &amp; Sewing">Crafts &amp; Sewing <span class="badge">0</span></a></div> <div class="big-x2 small-x6"><a href="/q/sewing/" title="Sewing Products">Sewing Products <span class="badge">6</span></a></div> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#D1F1FF">
+<link rel="stylesheet" href="/q/c.css">
+<header>
+  <a href="https://zalalaa.com">
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
     </div>
-</div>
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h3 class="margin-bottom-mini weight" align="center">在线留言</h3>
-  <div class="grid big-grid-middle large-grid-large isplit-content">
-    <div class="big-x12 grid discovers">{pboot:list num=12 order=isrecommend}
-      <a class="big-x3 flex flex-column" href="[list:link]" title="[list:title],[list:date]">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img src="[list:ico]"  alt="[list:title]" class="img-auto scale" /> </figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">[list:title len=26]<sup>[list:ext_price]</sup></strong>
-        <p class="size-small flex-grow">[list:content drophtml=1 dropblank=1 len=60]</p>
-      </a>{/pboot:list}
-    </div>
-  </div>
-    <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous</a></li>
-      <li><a href="javascript:;">Next</a></li>
-    </ul>
+    <h1>
+      zalalaa<span>.</span>com
+    </h1>
+  </a>
+</header>
+<main class="index">
+<p><a href="/">Home</a> >> <a href="/q/gbook/">在线留言</a></p>
+<h2>在线留言</h2>
+<time>2018-04-11</time>
+<div class="grid">
+<img src="/q/images/nopic.png" alt="[content::title],[content::date]">
   
+   
 </div>
+<h3>Help</h3><ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<h3>Video</h3><ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
 
-<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
+</main>
+<aside>
+  <div>
+    <nav aria-labelledby="nav-header">
+      <div>
+        <h2 id="nav-header">Site navigation</h2>
+        <a class="active" href="https://zalalaa.com">Home</a>
+        <a href="/q/abouts/">About Us</a>
+        <a href="/q/patches/">Applique Patches</a>
+        <a href="/q/article/">Blog</a>
+        <a href="/q/video/">Video</a>
+        <a href="/q/contact/">Contact Us</a>
+      </div>
+    </nav>
+  </div>
+</aside>
+<footer>
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+</footer>
+<div class="background-logo">
+<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
 </div>
-<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
