--- a/q/video/index.html
+++ b/q/video/index.html
@@ -1,79 +1,55 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="renderer" content="webkit">
 <title>Video-Arts, Crafts &amp; Sewing-zlalaa</title>
-<meta name="keywords" content="Embroidery stickers,Embroidery,cross-stitch,needlework,needlepoint,fancywork">
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
-<meta name="theme-color" content="#32CD32">
-<link rel="stylesheet" href="/q/p.min.css">
-<link rel="stylesheet" href="/q/p.css">
-<script src="/q/j.min.js"></script>
-<script src="/q/pj.min.js"></script>
-</head>
-<body>
-<div class="navbar shadow" id="navbar">
-  <a class="navbar-logo size-big" href="https://www.zalalaa.com/"><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="margin" /></a>
-  <div class="navbar-body" id="navbody">
-    <ul class="nav">
-      <li><a href="https://www.zalalaa.com/" title="Home">Home</a></li>
-      <li><a href="/q/abouts/" title="About Us">About Us</a></li>
-      <li><a href="/q/patches/" title="Applique Patches">Applique Patches</a></li>
-      <li><a href="/q/article/" title="Blog">Blog</a></li>
-      <li><a href="/q/video/" title="Video">Video</a></li>
-      <li><a href="/q/contact/" title="Contact Us">Contact Us</a></li>
-    </ul>
-  </div>
-  <ul class="nav nav-switch size-mini" data-navswitch="#navbody"><li></li><li></li><li></li></ul>
-</div>
-<script>
-  $(function(){
-    $("#navbar").auto({
-      "0":{"class":"navbar shadow"},
-      "1024":{"class":"navbar navbar-head navbar-show shadow"},
-    });
-  })
-</script>
-<br />
-
-<div class="layout grid-middle big-grid-middle large-grid-large isplit-full scrollto">
-  <h1 class="margin-bottom-mini weight" align="center">Video</h1>
-  <p align="center"></p>
-  <div class="grid big-grid-middle large-grid-large isplit-content">
-
-    <div class="big-x12 grid discovers">
-      <a class="big-x3 flex flex-column" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
-        <div class="overflow-hidden margin-bottom relative effect-hover">
-          <figure class="figure figure-above radius-big"><img loading="lazy" src="/q/upload/image/20201016/1602835286258353.jpg"  alt="Chinese traditional embroide···" class="img-auto scale" /></figure>
-          <div class="effect-content"><i class="icon-add text-main"></i></div>
-        </div>
-        <strong class="weight-small">Chinese traditional embroide···<sup>+</sup></strong>
-        <p class="flex-grow">Chinese traditional embroidery craft, arts and culture in a unique···<time>2018-04-12</time></p>
-      </a>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="theme-color" content="#D1F1FF">
+<link rel="stylesheet" href="/q/c.css">
+<header>
+  <a href="https://zalalaa.com">
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
     </div>
+    <h1>
+      zalalaa<span>.</span>com
+    </h1>
+  </a>
+</header>
+<main class="index">
+<h2>Video</h2>
+<h4></h4>
+<p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
+<div class="social-proof">
+  <h2>Video</h2>
+</div>
+<div bys="grid">
+<a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><img src="/q/upload/image/20201016/1602835286258353.jpg" alt="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><b>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</b></a><br />
   </div>
-</div>
+<h3>Help</h3><ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<h3>Video</h3><ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
 
-<div class="layout grid-large isplit scrollto">
-  <div class="grid documents">
-    <a class="big-x4" href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28">
-      <strong>Chinese traditional embroidery craft, arts and culture in a unique ancie···<sup>2018-04-12</sup></strong>
-    </a>
+</main>
+<aside>
+  <div>
+    <nav aria-labelledby="nav-header">
+      <div>
+        <h2 id="nav-header">Site navigation</h2>
+        <a class="active" href="https://zalalaa.com">Home</a>
+        <a href="/q/abouts/">About Us</a>
+        <a href="/q/patches/">Applique Patches</a>
+        <a href="/q/article/">Blog</a>
+        <a href="/q/video/">Video</a>
+        <a href="/q/contact/">Contact Us</a>
+      </div>
+    </nav>
   </div>
+</aside>
+<footer>
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+</footer>
+<div class="background-logo">
+<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
 </div>
-
-    <ul class="nav nav-page nav-divider">
-      <li><a href="javascript:;">Previous page</a></li>
-      <li><a href="javascript:;">Next page</a></li>
-    </ul>
-  
-
-<div class="layout padding-top-large padding-bottom-large padding-left padding-right">
-  <p class="size-small text-gray flex-grow">2024 Zalalaa.Com</p>  
-</div>
-<script src="https://instant.page/5.2.0" type="module" integrity="sha384-jnZyxPjiipYXnSU0ygqeac2q7CVYMbh84q0uHVRRxEtvFPiQYbXWUorga2aqZJ0z"></script>
 </body>
 </html>
