--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <title>404</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/c.css">
+<link rel="stylesheet" href="/q/c.css">
 <header>
   <a href="/">
     <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
