--- a/q/18.html
+++ b/q/18.html
@@ -32,8 +32,8 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
 <div class="social-proof">
  <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now $:12.99</a> <b>S/N: A18</b> </p>
 </div> 
-<p><a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p><a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p><a href="/q/13.html">Embroidery flower bud lace flower applique</a></p>
+<p><a href="/q/20.html">Skull cloth patch</a></p>
 <h3>Help</h3><ul>
 <li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
 <h3>Video</h3><ul>
