--- a/q/21.html
+++ b/q/21.html
@@ -26,8 +26,8 @@
 <div class="social-proof">
  <p><a href="https://www.paypal.com/ncp/payment/6VZM27GTQTRNJ" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Tiger head Embroiderye sticker" /> Buy Now $:12</a> <b>S/N: A21</b> </p>
 </div> 
-<p><a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
-<p><a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
+<p><a href="/q/20.html">Skull cloth patch</a></p>
+<p><a href="/q/22.html">Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</a></p>
 <h3>Help</h3><ul>
 <li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
 <h3>Video</h3><ul>
